{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 20,
  "lineage": "8d8c8699-1e81-893b-4473-3bf7cbf0bf15",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa7106695ab47397",
            "arn": "arn:aws:ec2:us-east-1:047719635410:elastic-ip/eipalloc-0aa7106695ab47397",
            "association_id": "eipassoc-0a04482cceb09aa39",
            "domain": "vpc",
            "id": "eipalloc-0aa7106695ab47397",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e571d85a8698c303",
            "private_dns": "ip-10-0-1-53.ec2.internal",
            "private_ip": "10.0.1.53",
            "public_dns": "ec2-13-216-149-198.compute-1.amazonaws.com",
            "public_ip": "13.216.149.198",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "DevOps-nat-eip"
            },
            "tags_all": {
              "Name": "DevOps-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca32bbc84273381",
            "arn": "arn:aws:ec2:us-east-1:047719635410:instance/i-0f2e03309cda300fe",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f2e03309cda300fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d7e7a5613d115ca4"
              }
            ],
            "primary_network_interface_id": "eni-0d7e7a5613d115ca4",
            "private_dns": "ip-10-0-2-155.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.155",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09b4313cb8f1d1884",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c43d1a63ab4dee0",
            "tags": {
              "Name": "DevOps-private-instance"
            },
            "tags_all": {
              "Name": "DevOps-private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00afaa3ba49dbc2be"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719635410",
            "id": "i-0f2e03309cda300fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.devops_key",
            "aws_security_group.private_sg",
            "aws_security_group.public_sg",
            "aws_subnet.Devops-pvt-sn",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00ca32bbc84273381",
            "arn": "arn:aws:ec2:us-east-1:047719635410:instance/i-0fde0aefcf7c0532c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fde0aefcf7c0532c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06dd5bd574fb2be36"
              }
            ],
            "primary_network_interface_id": "eni-06dd5bd574fb2be36",
            "private_dns": "ip-10-0-1-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.156",
            "public_ip": "3.238.184.239",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0af26c2f517653ec8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de2b457e1c55a015",
            "tags": {
              "Name": "DevOps-public-instance"
            },
            "tags_all": {
              "Name": "DevOps-public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-056f93f7de50be9fe"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719635410",
            "id": "i-0fde0aefcf7c0532c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.devops_key",
            "aws_security_group.public_sg",
            "aws_subnet.Devops-pub-sn",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DevOpsigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719635410:internet-gateway/igw-07a69b8e88985b53d",
            "id": "igw-07a69b8e88985b53d",
            "owner_id": "047719635410",
            "region": "us-east-1",
            "vpc_id": "vpc-01ae877f7c8fc13bb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aa7106695ab47397",
            "association_id": "eipassoc-0a04482cceb09aa39",
            "connectivity_type": "public",
            "id": "nat-03c0d268feec8ab81",
            "network_interface_id": "eni-0e571d85a8698c303",
            "private_ip": "10.0.1.53",
            "public_ip": "13.216.149.198",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de2b457e1c55a015",
            "tags": {
              "Name": "DevOps-nat-gw"
            },
            "tags_all": {
              "Name": "DevOps-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.Devops-pub-sn",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "pvt_rt_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0632aa989d7a18b831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03c0d268feec8ab81",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0632aa989d7a18b83",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719635410",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0632aa989d7a18b83"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.Devops-pub-sn",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719635410:route-table/rtb-0632aa989d7a18b83",
            "id": "rtb-0632aa989d7a18b83",
            "owner_id": "047719635410",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03c0d268feec8ab81",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOps-pvt-rt"
            },
            "tags_all": {
              "Name": "DevOps-pvt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ae877f7c8fc13bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719635410",
            "id": "rtb-0632aa989d7a18b83",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719635410:route-table/rtb-06ae3fb36981c331f",
            "id": "rtb-06ae3fb36981c331f",
            "owner_id": "047719635410",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07a69b8e88985b53d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOps-pub-rt"
            },
            "tags_all": {
              "Name": "DevOps-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ae877f7c8fc13bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719635410",
            "id": "rtb-06ae3fb36981c331f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.DevOpsigw",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sn_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae12f28711bd1102",
            "region": "us-east-1",
            "route_table_id": "rtb-06ae3fb36981c331f",
            "subnet_id": "subnet-0de2b457e1c55a015"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.DevOpsigw",
            "aws_route_table.public_rt",
            "aws_subnet.Devops-pub-sn",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sn_pvt_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee207f680c31f176",
            "region": "us-east-1",
            "route_table_id": "rtb-0632aa989d7a18b83",
            "subnet_id": "subnet-08c43d1a63ab4dee0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.Devops-pvt-sn",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719635410:security-group/sg-00afaa3ba49dbc2be",
            "description": "Allow SSH only from public instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00afaa3ba49dbc2be",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow SSH from Public Subnet SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056f93f7de50be9fe"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DevOps-private-sg",
            "name_prefix": "",
            "owner_id": "047719635410",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOps-private-sg"
            },
            "tags_all": {
              "Name": "DevOps-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ae877f7c8fc13bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719635410",
            "id": "sg-00afaa3ba49dbc2be",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719635410:security-group/sg-056f93f7de50be9fe",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056f93f7de50be9fe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "DevOps-public-sg",
            "name_prefix": "",
            "owner_id": "047719635410",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOps-public-sg"
            },
            "tags_all": {
              "Name": "DevOps-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ae877f7c8fc13bb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719635410",
            "id": "sg-056f93f7de50be9fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Devops-pub-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719635410:subnet/subnet-0de2b457e1c55a015",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de2b457e1c55a015",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047719635410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "DevOps-pub-sn"
            },
            "tags_all": {
              "Name": "DevOps-pub-sn"
            },
            "vpc_id": "vpc-01ae877f7c8fc13bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719635410",
            "id": "subnet-0de2b457e1c55a015",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Devops-pvt-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719635410:subnet/subnet-08c43d1a63ab4dee0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c43d1a63ab4dee0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "047719635410",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "DevOps-pvt-sn"
            },
            "tags_all": {
              "Name": "DevOps-pvt-sn"
            },
            "vpc_id": "vpc-01ae877f7c8fc13bb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719635410",
            "id": "subnet-08c43d1a63ab4dee0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DevOps-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719635410:vpc/vpc-01ae877f7c8fc13bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a196dd5810ac5cf",
            "default_route_table_id": "rtb-0dd780216f19cf716",
            "default_security_group_id": "sg-0ec5996fc6d37f4d0",
            "dhcp_options_id": "dopt-00c4ce2cd3a894130",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01ae877f7c8fc13bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd780216f19cf716",
            "owner_id": "047719635410",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}